# CloudCradle

./: .gitignore  FREE_TIER.md  LICENSE  Makefile  README.md  instances.tf  main.tf  network.tf  oci-autolaunch.sh  outputs.tf  pyproject.toml  requirements.txt  setup.py  setup_oci_terraform.sh  setup_oci_terraform.sh.old  variables.tf
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
docs/: FREE_TIER.md  FREE_TIER_ALT_EXPLANATION.md
implementations/bash/: README.md  setup_oci_terraform.bat  setup_oci_terraform.ps1  setup_oci_terraform.sh
implementations/go/: README.md  go.mod
implementations/go/cmd/setup-oci-terraform/: config.go  filegen.go  inventory.go  main.go  oci_client.go  terraform.go  utils.go
implementations/python/: README.md  setup_oci_terraform.py
implementations/typescript/: README.md
scripts/: check_no_backend_files.sh  out_of_capacity.sh
src/: variables.tf
src/oci_terraform_setup/: __init__.py  __main__.py  auth_manager.py  cli.py  oci_client.py  setup.py  terraform_manager.py
src/ssh_keys/: id_rsa  id_rsa.pub
ssh_keys/: id_rsa  id_rsa.pub
