[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-terraform-setup"
version = "1.0.0"
description = "Oracle Cloud Infrastructure Terraform Setup Tool"
authors = [{name = "OCI Terraform Setup", email = "setup@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "oci>=2.155.0",
    "python-terraform>=1.0.0",
    "cryptography>=3.2.1",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=5.4",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
oci-terraform-setup = "oci_terraform_setup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88 